# CharacterRPG

./: .gitignore  LICENSE  README.md  crpg  pyproject.toml
app/: App.tsx  README.md  package-lock.json  package.json
apps/chatgpt-companion/: README.md  package.json  tsconfig.json
backend/: .env.example  README.md  __init__.py
backend/app/: __init__.py  config.py  main.py  model_utils.py
backend/scripts/: run_backend.sh
backend/tests/: test_backend_foundation.py
character_profiles/Default/: generic.md
character_profiles/Ellis/: reviewer.md
docs/: ARCHITECTURE.md  BILLING_AND_USAGE.md  CHATGPT_COMPANION.md  DEBUGGING.md  DECISIONS.md  DEVELOPMENT_LOG.md  FUTURE_WORK.md  General_Default_Char_Prompt.md  General_Default_Char_Prompt_v2.md  General_Default_Char_Prompt_v3.md  IMPLEMENTATION_PLAN.md  INTERACTION_MODEL.md  Kyles_Laptop_Specs.txt  PROFILES_LAYOUT.md  REBOOT_DEV_PLAN.md  REQUIREMENTS.md  ROADMAP.md  Reviewer_Default_Prompt.md  STATE_OF_THE_ART.md  USAGE_AND_TESTING_CHEATSHEET.md  USER_GUIDE.md
docs/Conversations_with_GPT/: rpg-voice-app-architecture-and-mvp.md  rpg-voice-app-architecture-and-mvp.md:Zone.Identifier  rpg-voice-session-transcript.md  (+1 more)
gpt_builder/: instructions.md
scripts/: import_ash_pdf_transcript.py  import_ash_reconstructed_transcript.py  import_roleplaygpt_campaigns.py  install_android_shortcut.sh  start_character_rpg_android.sh
server/: .env  .env.example  .gitignore  config.example.json  package-lock.json  package.json  rpg.sqlite  tsconfig.json
web/: README.md  index.html  package-lock.json  package.json
(+114 files in other folders)
